FB-30 : Created User Access System For Venues
Users must now be authorized for each venue that they want to scan tickets for. This ensures that one venue can not scan for all venues.

Two new endpoints added.
Unit tests added.
